[gd_scene load_steps=6 format=3 uid="uid://dyk4w48v2tudo"]

[ext_resource type="Script" path="res://puzzle_mode.gd" id="1_rd2i4"]
[ext_resource type="Script" path="res://Bitboard.cs" id="2_8nms4"]
[ext_resource type="Script" path="res://DataHandlerCS.cs" id="3_4qdxx"]
[ext_resource type="Script" path="res://GeneratePath.cs" id="4_00esy"]
[ext_resource type="Script" path="res://PuzzleTextEdit.gd" id="5_32lff"]

[node name="Puzzle Mode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rd2i4")
dropdown_path = NodePath("Single Dropdown")
second_dropdown_path = NodePath("Multi Dropdown")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="ChessBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 648.0
offset_bottom = 648.0
color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="BoardGrid" type="GridContainer" parent="ChessBoard"]
custom_minimum_size = Vector2(624, 624)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -312.0
offset_right = 312.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="BitBoard" type="Node2D" parent="."]
script = ExtResource("2_8nms4")

[node name="DataHandlerCS" type="Node2D" parent="."]
script = ExtResource("3_4qdxx")

[node name="GeneratePath" type="Node" parent="."]
script = ExtResource("4_00esy")

[node name="SinglePuzzle" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 620.0
offset_top = 314.0
offset_right = 783.0
offset_bottom = 345.0
text = "Single-Move Puzzles"

[node name="TestClear" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 785.0
offset_top = 592.0
offset_right = 838.0
offset_bottom = 623.0
text = "Clear"

[node name="ProvideHint" type="Button" parent="."]
layout_mode = 0
offset_left = 984.0
offset_top = 330.0
offset_right = 1023.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 15
text = "Hint
"

[node name="MultiPuzzle" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 675.0
offset_top = 375.0
offset_right = 838.0
offset_bottom = 406.0
text = "Multi-Move Puzzles"

[node name="Restart Puzzle" type="Button" parent="."]
layout_mode = 0
offset_left = 985.0
offset_top = 370.0
offset_right = 1103.0
offset_bottom = 401.0
text = "Restart Puzzle"

[node name="Retry Move" type="Button" parent="."]
layout_mode = 0
offset_left = 985.0
offset_top = 370.0
offset_right = 1081.0
offset_bottom = 401.0
text = "Retry Move"

[node name="Puzzle 1" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 656.0
offset_top = 571.0
offset_right = 687.0
offset_bottom = 602.0
text = "1"

[node name="Puzzle 2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 694.0
offset_top = 571.0
offset_right = 725.0
offset_bottom = 602.0
text = "2"

[node name="Puzzle 3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 733.0
offset_top = 571.0
offset_right = 764.0
offset_bottom = 602.0
text = "3"

[node name="Puzzle 4" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 674.0
offset_top = 608.0
offset_right = 705.0
offset_bottom = 639.0
text = "4"

[node name="Puzzle 5" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 713.0
offset_top = 608.0
offset_right = 744.0
offset_bottom = 639.0
text = "5"

[node name="Main_Menu" type="Button" parent="."]
layout_mode = 1
offset_left = 702.0
offset_top = 19.0
offset_right = 761.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 0
text = "Main"

[node name="PuzzleTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 675.0
offset_top = 76.0
offset_right = 1125.0
offset_bottom = 321.0
text = "Select a Puzzle!"
placeholder_text = "Select a Puzzle!"
wrap_mode = 1
script = ExtResource("5_32lff")

[node name="Help" type="Button" parent="."]
layout_mode = 0
offset_left = 1043.0
offset_top = 19.0
offset_right = 1095.0
offset_bottom = 52.0
text = "Help
"

[node name="Puzzles Label" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 16.0
offset_right = 953.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 29
text = "Puzzles"

[node name="Single Dropdown" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 675.0
offset_top = 358.0
offset_right = 720.0
offset_bottom = 378.0

[node name="Multi Dropdown" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 829.0
offset_top = 358.0
offset_right = 874.0
offset_bottom = 378.0

[node name="Troubleshooting" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 694.0
offset_top = 534.0
offset_right = 821.0
offset_bottom = 557.0
text = "Troubleshooting"

[node name="Next Puzzle Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1031.0
offset_top = 330.0
offset_right = 1124.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 15
text = "Next Puzzle"

[node name="Single-Move Puzzles" type="Label" parent="."]
layout_mode = 0
offset_left = 705.0
offset_top = 331.0
offset_right = 793.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 15
text = "Single-Move"

[node name="Multi-Move Puzzles" type="Label" parent="."]
layout_mode = 0
offset_left = 862.0
offset_top = 331.0
offset_right = 945.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 15
text = "Multi-Move"

[connection signal="pressed" from="SinglePuzzle" to="." method="_on_single_puzzle_pressed"]
[connection signal="pressed" from="TestClear" to="." method="_on_test_clear_pressed"]
[connection signal="pressed" from="ProvideHint" to="." method="_on_provide_hint_pressed"]
[connection signal="pressed" from="MultiPuzzle" to="." method="_on_multi_puzzle_pressed"]
[connection signal="pressed" from="Restart Puzzle" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Retry Move" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Puzzle 1" to="." method="_on_puzzle_1_pressed"]
[connection signal="pressed" from="Puzzle 2" to="." method="_on_puzzle_2_pressed"]
[connection signal="pressed" from="Puzzle 3" to="." method="_on_puzzle_3_pressed"]
[connection signal="pressed" from="Puzzle 4" to="." method="_on_puzzle_4_pressed"]
[connection signal="pressed" from="Puzzle 5" to="." method="_on_puzzle_5_pressed"]
[connection signal="pressed" from="Main_Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="item_selected" from="Single Dropdown" to="." method="_on_single_dropdown_item_selected"]
[connection signal="item_selected" from="Multi Dropdown" to="." method="_on_multi_dropdown_item_selected"]
[connection signal="pressed" from="Next Puzzle Button" to="." method="_on_next_puzzle_button_pressed"]
